@@ -1,3 +1,7 @@
+2008-04-03  Ingmar Schlecht  <ingmar@typo3.org>
+
+	* Fixed bug #4575: Changes in alternative page language does not clear cache
+
 2008-03-31  Oliver Hader  <oliver@typo3.org>
 
 	* Fixed bug #7759: XCLASSing USER_INT objects does not work
